<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_img"
        android:scaleType="centerCrop" />


    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/brown"
            app:title="Settings"
            app:titleTextColor="@android:color/white"
            app:navigationIcon="@drawable/outline_arrow_back_24" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/App_preferences"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingBottom="8dp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchDarkMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Dark_mode" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchEnableRecording"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recording" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchVoiceActivation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/voice_activation" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Storage"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnClearCache"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cache"
                    app:backgroundTint="@color/brown"
                    android:textColor="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBackup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Backup"
                    app:backgroundTint="@color/brown"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Permissions"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnPermissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Manage"
                    app:backgroundTint="@color/brown"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/About"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp" />

                <TextView
                    android:id="@+id/textVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AppVersion"
                    android:textColor="@android:color/black"
                    android:paddingBottom="24dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>
