<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="#F6E6EA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- ICON -->
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/id_contact"
            android:contentDescription="@string/Icon"
            android:background="@drawable/icon_bg"
            android:padding="10dp" />

        <!-- INPUTS -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Contact_Name"
                android:background="@drawable/edit_text"
                android:textColor="#3A2A2A"
                android:textColorHint="#8A6D72"
                android:padding="12dp"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/Number"
                android:inputType="phone"
                android:background="@drawable/edit_text"
                android:textColor="#3A2A2A"
                android:textColorHint="#8A6D72"
                android:padding="12dp"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
