<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/white">


        <ImageView
            android:id="@+id/imgContact"
            android:layout_width="64dp"
            android:layout_height="100dp"
            android:src="@drawable/id_contact"
            android:contentDescription="@string/Icon"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/textContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/imgContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/imgContact">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Contact_Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etContactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etContactNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
